--- a/00-twinconnector-toolcaling.ipynb
+++ b/00-twinconnector-toolcaling.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,9 @@
     "        instructions = \"\"\"\n",
     "        IMPORTANT NOTES:\n",
     "        1. The model id in $metadata section is dtmi:com:example:ControlHub;1\n",
-    "        2. If you want to create new twin it must be connected to CentralUnit twin. Id of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
+    "        2. For creation new digital twin it must be connected to CentralUnit twin and this information must be reflected into request to update topology.\n",
+    "            For this operation ID of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
+    "            $relationshipName should be \"connects\"\n",
     "        \"\"\"\n",
     "        return definition + instructions\n",
     "    else:\n",
@@ -132,12 +134,12 @@
     "    \"\"\"\n",
     "    \n",
     "    # Create an instance of the DigitalTwinsClient\n",
-    "    # client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
+    "    client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "    \n",
     "    # Send data to the topology\n",
     "    try:\n",
-    "        # twin_data_dict = json.loads(twin_data)\n",
-    "        # client.upsert_digital_twin(twin_id, twin_data_dict)\n",
+    "        twin_data_dict = json.loads(twin_data)\n",
+    "        client.upsert_digital_twin(twin_id, twin_data_dict)\n",
     "        return \"SUCCESS\"\n",
     "    except Exception as e:\n",
     "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
@@ -184,38 +186,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\\n    \"@id\": \"dtmi:com:example:ControlHub;1\",\\n    \"@type\": \"Interface\",\\n    \"displayName\": \"Control Hub\",\\n    \"contents\": [\\n        {\\n            \"@type\": \"Property\",\\n            \"name\": \"name\",\\n            \"schema\": \"string\",\\n            \"writable\": true,\\n            \"displayName\": \"Name\",\\n            \"description\": \"Name configured by user\"\\n        },\\n        {\\n            \"@type\": \"Property\",\\n            \"name\": \"location\",\\n            \"schema\": \"string\",\\n            \"writable\": true,\\n            \"displayName\": \"Location\",\\n            \"description\": \"Location of the sensor specified by user\"\\n        },\\n        {\\n            \"@type\": \"Property\",\\n            \"name\": \"status\",\\n            \"schema\": {\\n                \"@type\": \"Enum\",\\n                \"valueSchema\": \"string\",\\n                \"enumValues\": [\\n                    {\"name\": \"on\", \"displayName\": \"On\", \"enumValue\": \"on\"},\\n                    {\"name\": \"off\", \"displayName\": \"Off\", \"enumValue\": \"off\"},\\n                    {\"name\": \"na\", \"displayName\": \"N/A\", \"enumValue\": \"na\"},\\n                    {\"name\": \"partial\", \"displayName\": \"Partial\", \"enumValue\": \"partial\"}\\n                ]\\n            },\\n            \"writable\": true,\\n            \"displayName\": \"Status\",\\n            \"description\": \"Operational status\"\\n        },\\n        {\\n            \"@type\": \"Relationship\",\\n            \"name\": \"connects\",\\n            \"minMultiplicity\": 0,\\n            \"maxMultiplicity\": 100,\\n            \"target\": \"dtmi:com:example:TermoSensor;1\",\\n            \"displayName\": \"Connects\",\\n            \"description\": \"The central unit connects to Termo Sensors\"\\n        }\\n    ],\\n    \"@context\": \"dtmi:dtdl:context;2\"\\n}\\n\\n    NOTES:\\n    1. The model id in $metadata section is dtmi:com:example:ControlHub;1\\n    2. If you want to create new twin it must be connected to CentralUnit twin. Id of CentalUnit twin must be queried through Azure Digital Twins Query API. \\n    '"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def get_info():\n",
-    "    with open('ontology/ControlHub.json', 'r') as file:\n",
-    "        definition = file.read()\n",
-    "\n",
-    "    instructions = \"\"\"\n",
-    "    IMPORTANT NOTES:\n",
-    "    1. The model id in $metadata section is dtmi:com:example:ControlHub;1\n",
-    "    2. If you want to create new twin it must be connected to CentralUnit twin. Id of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
-    "    \"\"\"\n",
-    "\n",
-    "    return definition + instructions\n",
-    "\n",
-    "get_info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -251,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,12 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "human_message = HumanMessage(\n",
-    "    content=\"Please create Control Hub with following parameters: Name: Hub_1, Location: Odesa, Status: on.\"\n",
+    "    content=\"Please create Control Hub with following parameters: Name: Hub_2, Location: Kyiv, Status: on.\"\n",
     ")"
    ]
   },
@@ -362,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -429,13 +399,15 @@
       "\n",
       "        IMPORTANT NOTES:\n",
       "        1. The model id in $metadata section is dtmi:com:example:ControlHub;1\n",
-      "        2. If you want to create new twin it must be connected to CentralUnit twin. Id of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
+      "        2. For creation new digital twin it must be connected to CentralUnit twin and this information must be reflected into request to update topology.\n",
+      "            For this operation ID of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
+      "            $relationshipName should be \"connects\"\n",
       "        \u001b[0m\u001b[32;1m\u001b[1;3m\n",
       "Invoking: `query-twin` with `{'query': \"SELECT * FROM digitaltwins T WHERE IS_OF_MODEL(T, 'dtmi:com:example:CentralUnit;1')\"}`\n",
       "\n",
       "\n",
       "\u001b[0m\u001b[38;5;200m\u001b[1;3m[{\"$dtId\": \"CentralUnit\", \"$etag\": \"W/\\\"b3475e2b-08af-4c4c-a1cc-b84dc74845e6\\\"\", \"$metadata\": {\"$model\": \"dtmi:com:example:CentralUnit;1\", \"$lastUpdateTime\": \"2024-07-05T07:18:42.8171974Z\"}}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `update-topology-tool` with `{'twin_id': 'Hub_1', 'twin_data': '{\"name\":\"Hub_1\",\"location\":\"Odesa\",\"status\":\"on\",\"$metadata\":{\"$model\":\"dtmi:com:example:ControlHub;1\"}}'}`\n",
+      "Invoking: `update-topology-tool` with `{'twin_id': 'Hub_2', 'twin_data': '{\"$metadata\":{\"$model\":\"dtmi:com:example:ControlHub;1\"},\"name\":\"Hub_2\",\"location\":\"Kyiv\",\"status\":\"on\",\"$relationships\":{\"connects\":{\"$targetId\":\"CentralUnit\",\"$relationshipName\":\"connects\"}}}'}`\n",
       "\n",
       "\n",
       "\u001b[0m\u001b[33;1m\u001b[1;3mSUCCESS\u001b[0m\u001b[32;1m\u001b[1;3mDONE with success\u001b[0m\n",
@@ -453,6 +425,96 @@
     "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
     "\n",
     "result = agent_executor.invoke({\"input\": human_message.content})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of the DigitalTwinsClient\n",
+    "client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
+    "\n",
+    "def upd_twin(twin_id, twin_data):\n",
+    "    # Send data to the topology\n",
+    "    try:\n",
+    "        twin_data_dict = json.loads(twin_data)\n",
+    "        client.upsert_digital_twin(twin_id, twin_data_dict)\n",
+    "        return \"SUCCESS\"\n",
+    "    except Exception as e:\n",
+    "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
+    "        return \"FAIL\"\n",
+    "    \n",
+    "def upd_rel(twin_id, relation_id, relation_data):\n",
+    "    try:\n",
+    "        relation_data_dict = json.loads(relation_data)\n",
+    "        client.upsert_relationship(twin_id, relation_id, relation_data_dict)\n",
+    "        return \"SUCCESS\"\n",
+    "    except Exception as e:\n",
+    "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
+    "        return \"FAIL\"\n",
+    "\n",
+    "twin_id = \"HUB_4\"\n",
+    "twin_data = \"\"\"\n",
+    "    {\n",
+    "        \"$metadata\":{\n",
+    "            \"$model\":\"dtmi:com:example:ControlHub;1\"\n",
+    "        },\n",
+    "        \"name\":\"Hub_4_name\",\n",
+    "        \"location\":\"Kyiv\",\n",
+    "        \"status\":\"on\",\n",
+    "        \"$relationships\":{\n",
+    "            \"connects\":{\n",
+    "                \"$targetId\":\"CentralUnit\",\n",
+    "                \"$relationshipName\":\"connects\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\"\"\"\n",
+    "\n",
+    "twin_id_2 = \"CentralUnit\"\n",
+    "relation_id=\"relationship1id\"\n",
+    "relation_data = \"\"\"\n",
+    "{\n",
+    "    \"$relationshipId\": \"relationship1id\",\n",
+    "    \"$sourceId\": \"CentralUnit\",\n",
+    "    \"$relationshipName\": \"connects\",\n",
+    "    \"$targetId\": \"HUB_4\",\n",
+    "    \"$metadata\": {\n",
+    "        \"$model\": \"dtmi:com:example:CentralUnit;1\"\n",
+    "    }\n",
+    "}\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SUCCESS'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upd_twin(twin_id, twin_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upd_rel(twin_id_2, relation_id, relation_data)"
    ]
   }
  ],
