Refined Control Hub operations (add/delete)

--- a/01-adt-create-twins-toolcaling.ipynb
+++ b/01-adt-create-twins-toolcaling.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,13 @@
     "from azure.identity import DefaultAzureCredential\n",
     "from langchain.pydantic_v1 import BaseModel, Field\n",
     "from langchain_core.tools import tool\n",
+    "from langchain.tools import HumanInputRun\n",
     "import json\n",
     "\n",
     "credential = DefaultAzureCredential()\n",
+    "\n",
+    "# Create an instance of the DigitalTwinsClient\n",
+    "client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "\n",
     "class ModelDefinitionInput(BaseModel):\n",
     "    model_type: str = Field(description=\"Model type that definition is required. For example: ControlHub or TemperatureSensor\")\n",
@@ -96,7 +100,7 @@
     "        return \"NA\"\n",
     "\n",
     "\n",
-    "class UpdateTopologyInput(BaseModel):\n",
+    "class UpdateTwinInput(BaseModel):\n",
     "    twin_id: str = Field(description=\n",
     "    \"\"\" This is mandatoty parameter!\n",
     "    The unique identifier of the digital twin that is going to be changed or created.\n",
@@ -123,18 +127,16 @@
     "    client.upsert_digital_twin(twin_id, twin_data)\n",
     "    \"\"\")\n",
     "\n",
-    "@tool(\"update-twin-tool\", args_schema=UpdateTopologyInput)\n",
+    "@tool(\"update-twin-tool\", args_schema=UpdateTwinInput)\n",
     "def update_twin(twin_id, twin_data)->str:\n",
     "    \"\"\"\n",
-    "        Update the digital twin of Azure Digital Twins Service.\n",
+    "        Adds or Updates the digital twin of Azure Digital Twins Service.\n",
     "        This function should be used when you want to:\n",
     "            - create new digital twin\n",
-    "            - remove a digital twin\n",
     "            - update parameters for existed digital twin.\n",
+    "\n",
+    "        return: SUCCESS if the operation was successful, otherwise FAIL with description of the error, you're welcome to analyse error and fix it.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Create an instance of the DigitalTwinsClient\n",
-    "    client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "    \n",
     "    # Send data to the topology\n",
     "    try:\n",
@@ -143,8 +145,32 @@
     "        return \"SUCCESS\\n\"\n",
     "    except Exception as e:\n",
     "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
-    "        return \"FAIL\\n\"\n",
+    "        return f'FAIL: + {str(e)}\\n'\n",
     "    \n",
+    "\n",
+    "class DeleteTwinInput(BaseModel):\n",
+    "    twin_id: str = Field(description=\n",
+    "    \"\"\" This is mandatoty parameter!\n",
+    "    The unique identifier of the digital twin that is going to be deleted.\n",
+    "    The identifier is a value of $dtId requested from Azure Digital Twins Query API\n",
+    "    \"\"\")\n",
+    "\n",
+    "@tool(\"delete-twin-tool\", args_schema=DeleteTwinInput)\n",
+    "def delete_twin(twin_id)->str:\n",
+    "    \"\"\"\n",
+    "        Delete the digital twin of Azure Digital Twins Service.\n",
+    "        This function should be used when you want to delete digital twin.\n",
+    "\n",
+    "        return: SUCCESS if the operation was successful, otherwise FAIL with description of the error, you're welcome to analyse error and fix it.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Send data to the topology\n",
+    "    try:\n",
+    "        client.delete_digital_twin(twin_id)\n",
+    "        return \"SUCCESS\\n\"\n",
+    "    except Exception as e:\n",
+    "        print(\"Error deleting digital twin in Azure Digital Twins service topology:\", str(e))\n",
+    "        return f'FAIL: + {str(e)}\\n'\n",
     "\n",
     "class UpdateRelationshipInput(BaseModel):\n",
     "    twin_id: str = Field(description=\n",
@@ -199,9 +225,6 @@
     "            - update parameters for existed relationship.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Create an instance of the DigitalTwinsClient\n",
-    "    client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
-    "    \n",
     "    # Send data to the topology\n",
     "    try:\n",
     "        relation_data_dict = json.loads(relation_data)\n",
@@ -234,8 +257,6 @@
     "    \"\"\"\n",
     "    if (query == None):\n",
     "        return \"FAIL: Query is not defined!\"\n",
-    "    \n",
-    "    client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "\n",
     "    # Execute the query\n",
     "    query_result = client.query_twins(query)\n",
@@ -246,8 +267,14 @@
     "    # Return the JSON result\n",
     "    return json_result\n",
     "\n",
+    "human_tool = HumanInputRun()\n",
     "\n",
-    "tools = [get_module_definition, update_twin, query_twin, update_relationship]"
+    "tools = [\n",
+    "    get_module_definition,\n",
+    "    update_twin, delete_twin, query_twin,\n",
+    "    update_relationship, \n",
+    "    human_tool\n",
+    "]"
    ]
   },
   {
@@ -260,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +359,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Add Control Hub"
+    "#### Control Hub\n",
+    "\n",
+    "- Add Control Hub"
    ]
   },
   {
@@ -343,6 +372,24 @@
    "source": [
     "human_message = HumanMessage(\n",
     "    content=\"Please create Control Hub with following parameters: Name: Hub_8, Location: Kyiv, Status: on.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Delete Control Hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_message = HumanMessage(\n",
+    "    content=\"Can you remove unit with id: Hub_2 from the topology\"\n",
     ")"
    ]
   },
@@ -371,94 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `get-module-definition` with `{'model_type': 'ControlHub'}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m{\n",
-      "    \"@id\": \"dtmi:com:example:ControlHub;1\",\n",
-      "    \"@type\": \"Interface\",\n",
-      "    \"displayName\": \"Control Hub\",\n",
-      "    \"contents\": [\n",
-      "        {\n",
-      "            \"@type\": \"Property\",\n",
-      "            \"name\": \"name\",\n",
-      "            \"schema\": \"string\",\n",
-      "            \"writable\": true,\n",
-      "            \"displayName\": \"Name\",\n",
-      "            \"description\": \"Name configured by user\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"@type\": \"Property\",\n",
-      "            \"name\": \"location\",\n",
-      "            \"schema\": \"string\",\n",
-      "            \"writable\": true,\n",
-      "            \"displayName\": \"Location\",\n",
-      "            \"description\": \"Location of the sensor specified by user\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"@type\": \"Property\",\n",
-      "            \"name\": \"status\",\n",
-      "            \"schema\": {\n",
-      "                \"@type\": \"Enum\",\n",
-      "                \"valueSchema\": \"string\",\n",
-      "                \"enumValues\": [\n",
-      "                    {\"name\": \"on\", \"displayName\": \"On\", \"enumValue\": \"on\"},\n",
-      "                    {\"name\": \"off\", \"displayName\": \"Off\", \"enumValue\": \"off\"},\n",
-      "                    {\"name\": \"na\", \"displayName\": \"N/A\", \"enumValue\": \"na\"},\n",
-      "                    {\"name\": \"partial\", \"displayName\": \"Partial\", \"enumValue\": \"partial\"}\n",
-      "                ]\n",
-      "            },\n",
-      "            \"writable\": true,\n",
-      "            \"displayName\": \"Status\",\n",
-      "            \"description\": \"Operational status\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"@type\": \"Relationship\",\n",
-      "            \"name\": \"connects\",\n",
-      "            \"minMultiplicity\": 0,\n",
-      "            \"maxMultiplicity\": 100,\n",
-      "            \"target\": \"dtmi:com:example:TermoSensor;1\",\n",
-      "            \"displayName\": \"Connects\",\n",
-      "            \"description\": \"The central unit connects to Termo Sensors\"\n",
-      "        }\n",
-      "    ],\n",
-      "    \"@context\": \"dtmi:dtdl:context;2\"\n",
-      "}\n",
-      "\n",
-      "        IMPORTANT NOTES:\n",
-      "        1. The model id in $metadata section is dtmi:com:example:ControlHub;1\n",
-      "        2. For creation new digital twin it must be connected to CentralUnit twin and this information must be reflected into request to update topology.\n",
-      "            For this operation ID of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
-      "            $relationshipName should be \"connects\"\n",
-      "        \u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `query-twin` with `{'query': \"SELECT * FROM digitaltwins T WHERE IS_OF_MODEL(T, 'dtmi:com:example:CentralUnit;1')\"}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3m[{\"$dtId\": \"CentralUnit\", \"$etag\": \"W/\\\"b3475e2b-08af-4c4c-a1cc-b84dc74845e6\\\"\", \"$metadata\": {\"$model\": \"dtmi:com:example:CentralUnit;1\", \"$lastUpdateTime\": \"2024-07-05T07:18:42.8171974Z\"}}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `update-twin-tool` with `{'twin_id': 'Hub_8', 'twin_data': '{\"$metadata\":{\"$model\":\"dtmi:com:example:ControlHub;1\"},\"name\":\"Hub_8\",\"location\":\"Kyiv\",\"status\":\"on\"}'}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3mSUCCESS\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `update-relationship-tool` with `{'twin_id': 'CentralUnit', 'relation_id': 'connection_Hub_8', 'relation_data': '{\"$relationshipId\":\"connection_Hub_8\",\"$sourceId\":\"CentralUnit\",\"$relationshipName\":\"connects\",\"$targetId\":\"Hub_8\",\"$metadata\":{\"$model\":\"dtmi:com:example:CentralUnit;1\"}}'}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3mSUCCESS\u001b[0m\u001b[32;1m\u001b[1;3mDONE with success\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from langchain import hub\n",
     "from langchain.agents import AgentExecutor, create_tool_calling_agent\n",
