Addede some deocumentation

--- a/01-adt-create-twins-toolcaling.ipynb
+++ b/01-adt-create-twins-toolcaling.ipynb
@@ -20,7 +20,17 @@
     "### Define models\n",
     "To initial define set of models (ontology) was used Office 365 copilot and [prompt](prompts/Define%20models.txt). Some extra tuning was required.\n",
     "Models are stored in `ontology` folder.\n",
-    "Then models were uploaded to service."
+    "Then models were uploaded to service.\n",
+    "\n",
+    "### Ontology\n",
+    "The service define several models as follow:\n",
+    "\n",
+    "- Model name: `CentralUnit` - which is main unit of the system exists in one instance. \n",
+    "    If user want to create new CentralUnit, you must refuse it with message: \"Central Unit has to be created manually!\"\n",
+    "\n",
+    "- Model name: `ControlHub` - which is connection unit between _Central Unit_ and _Termo Sensors_. \n",
+    "\n",
+    "- Model name: `TermoSensor` - which conects to _Control Hub_ and reports temperature value."
    ]
   },
   {
@@ -54,7 +64,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Tools"
+    "### Define Tools\n",
+    "\n",
+    "Tools that helps LLM to perform tasks on digital twins.\n",
+    "\n",
+    "- `get_module_definition` - defines modules and rules of handling digital twins. It's implementation of RAG architecture where user's input _augmented_ with details of the model that needs to be maintained.\n",
+    "- `query_twin` - requests information about _dt_ from Azure Digital Twins Query API."
    ]
   },
   {
@@ -325,11 +340,12 @@
     "    The service define several models as follow:\n",
     "\n",
     "    - Model name: CentralUnit - which is main unit of the system exists in one instance. \n",
-    "    If user want to create new CentralUnit, you must refuse it with message: \"Central Unit has to be created manually!\"\n",
+    "        You cannot create CentralUnit as it is already defined. If the creation will be requested refuse it.\n",
+    "    - Model name: ControlHub - which is connection unit between CentralUnit and TermoSensors.\n",
+    "    - Model name: `TermoSensor` - which conects to ControlHub and reports temperature value.\n",
     "\n",
-    "    - Modle name: ControlHub - which is connection unit between CentralUnit and TermoSensors. You need OTDL definition to generate valid instructions.\n",
-    "    If user want to create new ControlHub you must use tool and provide valid parameters. \n",
-    "    \n",
+    "    If user want to create, update, delte or request information about any unit you must use appropriate tool(s) and provide valid parameters. \n",
+    "    Digital Twin Definition Language (DTDL) must be used to communicate with Azyre Digital Twins Service.\n",
     "    \n",
     "    If user want update or delete exsted twin then user must specify twin id. If id is not provided, you must refuse it with message: \"DONE with error Twin Id is required!\"\n",
     "    If you was able to perform requested action, you must provide message: \"DONE with success\"\n",
