Added some rules for topology

--- a/01-adt-create-twins-toolcaling.ipynb
+++ b/01-adt-create-twins-toolcaling.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     "client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "\n",
     "class ModelDefinitionInput(BaseModel):\n",
-    "    model_type: str = Field(description=\"Model type that definition is required. For example: ControlHub or TemperatureSensor\")\n",
+    "    model_type: str = Field(description=\"Model type that definition is required. For example: ControlHub or TermoSensor\")\n",
     "\n",
     "@tool(\"get-module-definition\", args_schema=ModelDefinitionInput)\n",
     "def get_module_definition(model_type:str) -> str:\n",
@@ -106,9 +106,26 @@
     "        instructions = \"\"\"\n",
     "        IMPORTANT NOTES:\n",
     "        1. The model id in $metadata section is dtmi:com:example:ControlHub;1\n",
-    "        2. For creation new digital twin it must be connected to CentralUnit twin and this information must be reflected into request to update topology.\n",
-    "            For this operation ID of CentalUnit twin must be queried through Azure Digital Twins Query API. \n",
-    "            $relationshipName should be \"connects\"\n",
+    "        2. When requested creation new digital twin it must be performed in 2 steps:\n",
+    "            - create new digital twin of ControlHub model\n",
+    "            - create relationship between new digital twin and CentralUnit twin. ID of CentalUnit twin must be queried through Azure Digital Twins Query API. $relationship Name should be \"connects\"\n",
+    "        \"\"\"\n",
+    "        return definition + instructions\n",
+    "    elif model_type == \"TermoSensor\":\n",
+    "        with open('ontology/TermoSensor.json', 'r') as file:\n",
+    "            definition = file.read()\n",
+    "\n",
+    "        instructions = \"\"\"\n",
+    "        IMPORTANT NOTES:\n",
+    "        1. The model id in $metadata section is dtmi:com:example:TermoSensor;1\n",
+    "        2. When requested creation new digital twin it must be performed in 2 steps:\n",
+    "            - create new digital twin of Termosensor model\n",
+    "            - create relationship between new digital twin and ControlHub twin. \n",
+    "                $relationship Name should be \"connects\"\n",
+    "                To make this relationship you must know id of ControlHub twin, this can be obtained by several ways:\n",
+    "                - user can specify id of ControlHub twin in initial request - in this case you have this information.\n",
+    "                - user may specidy name of ControlHub - in this case you must query its id through Azure Digital Twins Query API.\n",
+    "                - if user does not provide neither name nor id you should use available for you human tool and ask the name of ControlHub twin. And then use it to get id as specified above.\n",
     "        \"\"\"\n",
     "        return definition + instructions\n",
     "    else:\n",
@@ -262,31 +279,30 @@
     "        The request returns all description of all twins with type ControlHub.\n",
     "    \"\"\")\n",
     "\n",
-    "@tool(\"query-twin\", args_schema=QueryTwinInput)\n",
-    "def query_twin(query:str) -> str:\n",
+    "@tool(\"query-service\", args_schema=QueryTwinInput)\n",
+    "def query_service(query:str) -> str:\n",
     "    \"\"\"\n",
-    "        Request information about twins in Azure Digital Twins Service.\n",
-    "        This function should be used whan you need to get information about particular twin or several items.\n",
+    "        Request information about twins or relationships in Azure Digital Twins Service.\n",
+    "        This function should be used whan you need to get information about particular twin or several items or relationships between them.\n",
     "\n",
-    "        return: response from Azure Digital Twins Query API in JSON format.\n",
+    "        return: response from Azure Digital Twins Query API in JSON format. If function fails it return text started with FAIL word and description of the error, you're welcome to analyse error and fix it.\n",
     "    \"\"\"\n",
     "    if (query == None):\n",
     "        return \"FAIL: Query is not defined!\"\n",
     "\n",
-    "    # Execute the query\n",
-    "    query_result = client.query_twins(query)\n",
-    "\n",
-    "    # Convert the results to JSON\n",
-    "    json_result = json.dumps(list(query_result))\n",
-    "\n",
-    "    # Return the JSON result\n",
-    "    return json_result\n",
+    "    try:\n",
+    "        query_result = client.query_twins(query)\n",
+    "        json_result = json.dumps(list(query_result))\n",
+    "        return json_result\n",
+    "    except Exception as e:\n",
+    "        print(\"Error deleting digital twin in Azure Digital Twins service topology:\", str(e))\n",
+    "        return f'FAIL: + {str(e)}\\n'\n",
     "\n",
     "human_tool = HumanInputRun()\n",
     "\n",
     "tools = [\n",
     "    get_module_definition,\n",
-    "    update_twin, delete_twin, query_twin,\n",
+    "    update_twin, delete_twin, query_service,\n",
     "    update_relationship, \n",
     "    human_tool\n",
     "]"
@@ -327,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +364,13 @@
     "    Digital Twin Definition Language (DTDL) must be used to communicate with Azyre Digital Twins Service.\n",
     "    \n",
     "    If user want update or delete exsted twin then user must specify twin id. If id is not provided, you must refuse it with message: \"DONE with error Twin Id is required!\"\n",
+    "\n",
+    "    Relationship between digital twins are stored separately from twins. If user request information where connection between twins presens you must request\n",
+    "    relationship information from relationships collection!\n",
+    "    For example for question: what temperature sensor connected to hub with id Node_23 valid query will be:\n",
+    "    SELECT * FROM relationships WHERE $sourceId = 'Node_23'\n",
+    "    Note request was done for relationships not digitaltwins collection.\n",
+    "    \n",
     "    If you was able to perform requested action, you must provide message: \"DONE with success\"\n",
     "    \"\"\"\n",
     ")\n",
@@ -400,12 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "human_message = HumanMessage(\n",
-    "    content=\"Can you remove unit with id: Hub_2 from the topology\"\n",
+    "    content=\"Where located Control Hub HUB_4?\"\n",
     ")"
    ]
   },
@@ -418,11 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"hello world!\")"
+    "human_message = HumanMessage(\n",
+    "    content=\"Please create new TermoSensor with following parameters: Name: Sensor_2, Location: Kyiv, Temperature: 22, Status: on. This sensor must be connected to ControlHub id: Hub_8\"\n",
+    ")"
    ]
   },
   {
@@ -434,9 +459,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `query-service` with `{'query': \"SELECT * FROM relationships WHERE $sourceId = 'Hub_8'\"}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{\"$relationshipId\": \"connection_Sensor_1\", \"$sourceId\": \"Hub_8\", \"$targetId\": \"Sensor_1\", \"$relationshipName\": \"connects\", \"$etag\": \"W/\\\"37e1ead2-7405-4fbe-baf9-5260fbd0a6e4\\\"\"}, {\"$relationshipId\": \"connection_Sensor_2\", \"$sourceId\": \"Hub_8\", \"$targetId\": \"Sensor_2\", \"$relationshipName\": \"connects\", \"$etag\": \"W/\\\"40354343-bc7b-4e97-b0df-9c41fce77c66\\\"\"}]\u001b[0m\u001b[32;1m\u001b[1;3mNo, you cannot disconnect Hub_8 because it has connected devices (Sensor_1 and Sensor_2).\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# from langchain import hub\n",
     "from langchain.agents import AgentExecutor, create_tool_calling_agent\n",
