Tuned batch update, added tracing

--- a/00-adt-experiments.ipynb
+++ b/00-adt-experiments.ipynb
@@ -92,6 +92,14 @@
     "    except Exception as e:\n",
     "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
     "        return \"FAIL\"\n",
+    "    \n",
+    "def del_rel(source_twin_id:str, relationship_id:str):\n",
+    "    try:\n",
+    "        client.delete_relationship(source_twin_id, relationship_id)\n",
+    "        return \"SUCCESS\"\n",
+    "    except Exception as e:\n",
+    "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
+    "        return \"FAIL\"\n",
     "\n",
     "twin_id = \"HUB_4\"\n",
     "twin_data = \"\"\"\n",
