moved diagrams to dedicated folder

--- a/01-adt-create-twins-toolcaling.ipynb
+++ b/01-adt-create-twins-toolcaling.ipynb
@@ -172,7 +172,9 @@
     "Tools that helps LLM to perform tasks on digital twins.\n",
     "\n",
     "- `get_module_definition` - defines modules and rules of handling digital twins. It's implementation of RAG architecture where user's input _augmented_ with details of the model that needs to be maintained.\n",
-    "- `query_twin` - requests information about _dt_ from Azure Digital Twins Query API."
+    "- `query_service` - requests information about _digital twin_ from Azure Digital Twins Query API.\n",
+    "- `update_twin`, `delete_twin` - creates or deletes _digital twin_.\n",
+    "- `update_relationship`, `delete_relationship` - creates or deletes _relationship_ between digital twins.\n"
    ]
   },
   {
@@ -697,15 +699,6 @@
     "result = agent_executor.invoke({\"input\": human_message.content})\n",
     "\n",
     "# result = agent_executor.invoke({\"input\": human_message.content}, {\"callbacks\": [handler]})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# handler.print_buffer()"
    ]
   }
  ],
