--- a/01-adt-create-twins-toolcaling.ipynb
+++ b/01-adt-create-twins-toolcaling.ipynb
@@ -41,6 +41,11 @@
     "Utilise GenAI to work with toplogy\n",
     "Add, update, remove digital twin to the graph.\n",
     "\n",
+    "### Overview\n",
+    "\n",
+    "![ReAct](diagrams/ReAct.png)\n",
+    "\n",
+    "\n",
     "### Init"
    ]
   },
